--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
-  --font-sans: 'Outfit', sans-serif;
+  --font-sans: 'Space Grotesk', sans-serif;
 
   --color-slate-950: #020617;
 }
